# the-agent-lab

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  mcp.json
labs/: .gitignore  00_llm_fundamentals.py  02b_prompt_engineering.py  03_agent_manual.py  07b_ecosystem_fluency.py  08b_inference_platforms.py  09b_voice_image_agents.py  10_guardrails.py  12b_a2a_demo.py  12b_a2a_orchestrator.py  12b_a2a_specialist.py  18_direct_agent_sdk.py  18_direct_anthropic.py  19_ai_gateway.py  20_citations_demo.py  20_pdf_vision.py  21b_portfolio_generator.py  22_hybrid_rag.py  23_graph_rag.py  24_corrective_rag.py  25_evaluation.py  27_streaming.py  28_production_app.py  30_system_design_helper.py  31_red_teaming.py  34_farm_planner_engine.py  34_farm_planner_ui.py  41_architecture_summary.py  46_claude_code_project_structure.py  CURRICULUM.csv  eval_dataset.json  llm_api_internals.py  pyproject.toml  requirements.txt  run_paddy_pdf.py
labs/agritech/: telangana_knowledge_base.md  yield-optimizer-design.md  yield_optimizer_engine.py
labs/coding_agent/: AGENT.md  agent_loop.py  context.py  hooks.py  main.py  memory.py
labs/docker/: ollama-compose.yml
labs/farm_plans/: .gitignore  sample_plan_suryapet.json
labs/lessons/: 00-llm-fundamentals.md  00c-agent-loop.md  02b-prompt-engineering.md  03-agent-tool-loop.md  07b-ecosystem-fluency.md  08b-inference-platforms.md  09b-voice-image-agents.md  10-guardrails.md  12b-a2a-protocol.md  17-claude-skills.md  17b-iam-auth.md  18-anthropic-sdk.md  19-ai-gateway.md  1c-context-assembly.md  20-files-document-ai.md  21b-portfolio-generator.md  (+45 more)
(+199 files in other folders)
